# ntropy

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/workflows/: publish.yml  python-publish.yml
cookbook/local-setup/: Ntropy Central Auth System.ipynb
examples/AWS-multimodal-RAG/: downloaded_final_data.json  main.ipynb  vectors.json
examples/local-setup/: private_key.pem
examples/multimodal-rag-slide-deck/: main.ipynb
examples/sp500-report/: main.ipynb
ntropy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ntropy/RAG/: utils.py
ntropy/RAG/vector_store/: chroma.py
ntropy/core/auth/: __init__.py
ntropy/core/document_instance/load/: pdf.py
ntropy/core/document_instance/process/: chunk_text.py
ntropy/core/embeddings/: __init__.py  aws.py  openai.py
ntropy/core/models/: ollama.py
ntropy/core/providers/: __init__.py  aws.py  ollama.py  openai.py
ntropy/core/utils/: __init__.py  auth_format.py  base_format.py  prompt.py  settings.py
ntropy/core/utils/chat/: __init__.py  format.py
ntropy/core/utils/db/: Login.db
ntropy/core/vector_store/: __init__.py  pinecone.py
ntropy_ai/core/providers/: anthropic.py  aws.py  ollama.py  openai.py  pinecone.py
ntropy_ai/core/utils/: settings.py
ntropy_ai/core/utils/db/: Login.db
tests/: core-auth-test.py  document-instance-test.py  library-test.py  providers-aws-test.py  providers-openai-test.py  vector-store-pinecone-tests.py
