[tool.poetry]
name = "ntropy-ai"
version = "0.1.0-alpha"
description = "Unleash the power of multimodal agents"
authors = ["Hugo Le Belzic <hugolebelzic@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
